fixed gutter spacing

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -12,7 +12,7 @@
 $susy: (
     columns: 12,
     gutter-position: inside-static,
-    gutters: 30px / 80px,
+    gutters: 30px / 70px,
     column-width: 70px
 );
 
